fix .latest_products stretching

--- a/style_bonfire.css
+++ b/style_bonfire.css
@@ -6,9 +6,7 @@ html {
 	height: 0;
 	min-height: 100%;
 }
-article, aside, details, figcaption, figure, footer, header, hgroup, main, nav, section, summary {
-	display: block;
-}
+
 body {
 	font: normal 16px/20px Consolas, Tahoma, Verdana, Arial, sans-serif;
 	min-width: 600px;
@@ -35,21 +33,24 @@ body {
 	background: linear-gradient(to top, #f44620, #fa592b);
 	box-shadow: inset 0 0 50px -30px ;
 }
-div#head{
+#head{
 	display: flex;
 	max-width: 940px;
 	height: 79px;
 	margin: 0 auto;
 	justify-content: space-between;
 }
-header a {
+.homelink {
 	text-decoration: none;
 }
-
-img#logo-png {
+.homelink *:hover {
+	text-shadow: 2px 2px 4px black;
+	cursor: pointer;
+}
+#logo-png {
 	margin-top: 16px;
 }
-p#logo-text{
+#logo-text{
 	display: inline;
 	position: relative;
 	bottom: 9px;
@@ -57,7 +58,7 @@ p#logo-text{
 	font: 28px ChelseaMarket-Regular;
 	color: white;
 }
-p#logo-text-2{
+#logo-text-2{
 	margin-left: 159px;
 	margin-top: -27px;
 	line-height: 1px;
@@ -66,13 +67,13 @@ p#logo-text-2{
 }
 
 
-div#cart-menu-wrapper{
+#cart-menu-wrapper{
 	display: flex;
 	justify-content: space-between;
 	height: 100%;
 	
 }
-ul#head-menu {
+#head-menu {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
@@ -93,20 +94,20 @@ ul#head-menu {
 	cursor: pointer;
 }
 
-a#cart{
+#cart{
 	position: relative;
 	display: inline-block;
 	float: right;
 	margin: 23px 17px 0 0;
 }
 
-a#cart img:hover{
+#cart img:hover{
 	box-shadow: 2px 2px 2px -2px black;
 }
-a#cart span:hover{
+#cart span:hover{
 	text-shadow: 2px 2px 4px black;
 }
-span#cart-bubble{
+#cart-bubble{
 	display: block;
 	height: 18px;
 	width: 18px;
@@ -134,7 +135,7 @@ nav{
 	background: url(images/bg_nav.jpg) repeat-x;
 	border-bottom: 4px solid #f1e9cf;
 }
-ul#nav{
+#nav{
 	list-style: none;
 	max-width: 940px;
 	min-width: 600px;
@@ -143,15 +144,15 @@ ul#nav{
 	font: 16px/16px TerminalDosis-Book;
 	display: flex;
 }
-ul#nav > li{
+#nav > li{
 	position: relative;
 	flex: 1;
 }
-ul#nav > li:first-child {
+#nav > li:first-child {
 	flex: 0 1; 
 	margin: 0;
 }
-ul#nav > li:nth-child(3){
+#nav > li:nth-child(3){
 	flex: 1.5; 
 }
 .nav_link{
@@ -163,28 +164,28 @@ ul#nav > li:nth-child(3){
 	align-items: center;
 	justify-content: center;
 }
-ul#nav > li:hover{
+#nav > li:hover{
 	background: linear-gradient(to top, #fbf2d3, #f0e4b8);
 	cursor: pointer;
 }
-ul#nav li:hover ul{
+#nav li:hover ul{
 	display: flex;
 	flex-direction: column;
 	display: block;
 	z-index: 100;
 }
 
-ul.nav-drop{
+.nav-drop{
 	position: absolute;
 	background: #fbf2d3;
 	list-style: none;
 	min-width: 100%;
 	display: none;
 }
-ul.nav-drop li{
+.nav-drop li{
 	margin: 0 5% 0 5%;
 }
-ul.nav-drop a{
+.nav-drop a{
 	display: block;
 	height: 20px;
 	padding: 0 5% 0 8%;
@@ -193,31 +194,31 @@ ul.nav-drop a{
 	font: 12px/20px TerminalDosis-Book;
 	color: #7d7253;
 }
-ul.nav-drop a:hover{
+.nav-drop a:hover{
 	color: white;
 	background: #f54922;
 }
 
-div#line-4{
+#line-4{
 	height: 60px;
 	background: linear-gradient(to top, #f9f6f2, #f8f5f1);
 	text-align: center;
 	border-bottom: 5px solid #f5f5f5;
 }
-form#search-form{
+#search-form{
 	max-width: 940px;
 	display: flex;
 	margin: 0 auto;
 	height: 100%;
 	align-items: center;
 }
-p#welcome{
+#welcome{
 	color: #a7a49c;
 	font: 14px TerminalDosis-Book;
 	font-style: oblique;
 	margin-right: auto;
 }
-input#search{
+#search{
 	/*float: right;*/
 	width: 156px;
 	height: 25px;
@@ -232,7 +233,7 @@ input#search{
 	padding: 0 13px 0 11px;    
 }
 
-div#dropdown{
+#dropdown{
 	margin: 0 14px 0 0;
 	width: 134px;
 	height: 25px;
@@ -242,7 +243,7 @@ div#dropdown{
 	border-top: 1px solid #dedede;
 	border-left: 1px solid #e0e0e0;
 }
-select#currency{
+#currency{
 	width: 134px;
 	margin: 0;
 	border: 0;
@@ -255,54 +256,54 @@ select#currency{
 	appearance: none;
 
 }
-select#currency::-ms-expand {
+#currency::-ms-expand {
 display: none;
 }
-ul.social{
+.social{
 	margin-right: 9px;
 	list-style: none;
 	height: 10px;
 	flex: 1 0;
 }
 
-ul.social li{
+.social li{
 	height: 100%;
 	width: 18px;
 	float: right;
 	background: url(images/social_icons.png) 0 0 no-repeat;
 }
-ul.social li:nth-child(1)  {
+.social li:nth-child(1)  {
 	background-position: -54px 0px;
 }
-ul.social li:nth-child(1):hover  {
+.social li:nth-child(1):hover  {
 	background-position: -54px -10px;
 }
 
-ul.social li:nth-child(2)  {
+.social li:nth-child(2)  {
 	background-position: -36px 0px;
 	margin-right: 3px;
 }
-ul.social li:nth-child(2):hover  {
+.social li:nth-child(2):hover  {
 	background-position: -36px -10px;
 }
 
-ul.social li:nth-child(3)  {
+.social li:nth-child(3)  {
 	background-position: -18px 0px;
 	margin-right: 3px;
 }
-ul.social li:nth-child(3):hover  {
+.social li:nth-child(3):hover  {
 	background-position: -18px -10px;
 }
 
-ul.social li:nth-child(4)  {
+.social li:nth-child(4)  {
 	background-position: 0px 0px;
 	margin-right: 3px;
 }
-ul.social li:nth-child(4):hover  {
+.social li:nth-child(4):hover  {
 	background-position: 0px -10px;
 }
 
-ul.social li a{
+.social li a{
 	background: transparent;
 	display: block;
 	height: 100%;
@@ -310,16 +311,19 @@ ul.social li a{
 
 /* Content
 -----------------------------------------------------------------------------*/
-main.content {
+.content {
 	position: relative;
-	max-width: 940px;
+	max-width: 1000px;/*940px;*/
 	min-width: 600px;
 	min-height: 100%;
 	margin: 0 auto;
 }
+.content >*{
+	margin-left: 30px;
+	margin-right: 30px;
+}
 
-div#slider{
-	width: 100%;
+#slider{
 	overflow: hidden;
 }
 #slider > ul li:not(:nth-child(1)){
@@ -333,7 +337,7 @@ div#slider{
 	width: 100%;
 }
 
-div#slide_ruler{
+#slide_ruler{
 	height: 65px;
 	width: 100%;
 	background: linear-gradient(to right, #91d2d0, #9bd7d5);
@@ -376,7 +380,7 @@ div#slide_ruler{
 	vertical-align: middle;
 }
 
-div.purchase {
+.purchase {
 	float: right;
 	height: 100%;
 	margin-left: 13px;
@@ -418,7 +422,7 @@ div.purchase {
 	vertical-align: middle;
 }
 
-div.featured{
+.featured{
 	height: 10px;
 	overflow: hidden;
 	margin-top: 10px;
@@ -442,13 +446,12 @@ div.featured{
 	border-bottom: 1px solid #ece9e5;
 }
 
-ul.products{
+.products{
 	list-style: none;
 	margin-top: 40px;
 	margin-bottom: 40px;
 	display: flex;
 	justify-content: space-between;
-	width: 100%;
 }
   
 .products > li{
@@ -498,7 +501,7 @@ ul.products{
 .add_to_cart button:hover{
 	cursor: pointer;
 }
-ul.price{
+.price{
 	background: linear-gradient(to top, #cccccc, #e8e8e8);
 	display: inline-block;
 	line-height: 0;
@@ -534,7 +537,7 @@ ul.price{
 	height: 0px;
 }
 
-div.brands{
+.brands{
 	height: 148px;
 	display: flex;
 	justify-content: space-between;
@@ -559,16 +562,25 @@ div.brands{
 }
 
 .latest_products{
-	display: flex;
 	justify-content: space-between;
+	display: flex;
 	align-items: center;
+	margin: 0 auto;
 }
-img.product_arrow_left{
-	margin-left: -26px;
+.latest_products> ul {
+	width: 940px;
 }
-img.product_arrow_right{
+
+.product_arrow_left{
+	margin: 0 13px 0 4px;
+	width: 13px;
+	flex: none;	
+}
+.product_arrow_right{
 	transform: rotate(180deg);
-	margin-right: -26px;
+	margin: 0  4px 0 13px;
+	width: 13px;
+	flex: none;	
 }
 .product_arrow_left:hover{
 	cursor: pointer;
@@ -577,8 +589,7 @@ img.product_arrow_right{
 	cursor: pointer;
 }
 
-
-ul.page_buttons{
+.page_buttons{
 	list-style: none;
 	display: flex;
 	justify-content: space-between;
@@ -608,29 +619,29 @@ ul.page_buttons{
 
 
 @media (max-width: 800px) {
-	ul.nav-drop{
+	.nav-drop{
 		width: 110%;
 	}
 }
 
 
 @media (max-width: 700px) {
-	ul.products > li{
+	.products > li{
 		width: calc(94.4%/3 - 2px);
 	}
 	.products > li:last-child{
 		display: none;
 	}
-	p#logo-text-2{
+	#logo-text-2{
 		margin: 0;
 	}
-	ul.nav-drop{
+	.nav-drop{
 		width: 120%;
 	}
 	
 }
 @media (max-width: 650px) {
-	ul.nav-drop{
+	.nav-drop{
 		width: 130%;
 	}
 }	
